whoami/00-whoami.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: whoami
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  namespace: whoami
spec:
  replicas: 0
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        resources:
          requests:
            memory: "32Mi"
            cpu: "50m"
          limits:
            memory: "32Mi"
            cpu: "50m"
        image: traefik/whoami
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami
  annotations:
    consul.hashicorp.com/service-tags: 'traefik.enable=true, traefik.http.routers.whoami-whoami.entrypoints=web, traefik.http.routers.whoami-whoami.rule=Host(`whoami-consprov.docker.localhost`)'
  labels:
    app: whoami
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: whoami
  selector:
    app: whoami
